# roup

./: .gitattributes  .gitignore  .gitmodules  .test-hook  404.html  AGENTS.md  CNAME  COMPAT_AST_SPEC.md  COMPAT_AUDIT.md  COMPAT_REFACTOR_PLAN.md  Cargo.toml  DOCUMENTATION_FIXES_SUMMARY.md  FORTRAN_SUPPORT_SUMMARY.md  LICENSE  OMPPARSER_COMPAT_STATUS.md  PR_DESCRIPTION.md  README.md  RELEASE_NOTES.md  ROUP_COMPAT_EXECUTION_PLAN.md  ROUP_COMPAT_REFACTOR_PLAN.md  TESTING.md  accparser-compat.html  api-reference.html  architecture.html  build.rs  building.html  c-tutorial.html  check_tests.sh  contributing.html  cpp-tutorial.html  faq.html  fortran-tutorial.html  getting-started.html  index.html  intro.html  keywords_analysis.json  line-continuations.html  ompparser-compat.html  openacc-support.html  openmp-support.html  (+19 more)
.circleci/: config.yml
.claude/: settings.json
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: build.yml  ci.yml  codex-after-ci.yml  docs.yml  parser.yml  publish.yml
api/: crates.js  help.html  search-index.js  settings.html  src-files.js
api/check_directives/: all.html  fn.directive_kind.html  fn.main.html  index.html  sidebar-items.js
api/roup/: all.html  index.html  sidebar-items.js
api/roup_debug/: all.html  enum.InputLanguage.html  fn.detect_language.html  fn.detect_openacc_language.html  fn.main.html  fn.print_usage.html  index.html  sidebar-items.js
api/roup_roundtrip/: all.html  enum.Dialect.html  enum.InputLanguage.html  fn.detect_language.html  fn.detect_openacc_language.html  fn.main.html  index.html  sidebar-items.js
api/search.index/: 0081bbbab83c.js  00c0b637c760.js  01853b750f90.js  02361cb58b00.js  023993ceb946.js  034b1cce01f5.js  03903eeefcde.js  03b829ff3abf.js  03d2b774936d.js  03dfa045f0a4.js  0570be5b8af3.js  059623f87225.js  05b2459f742b.js  05d2c6be2729.js  068fdcfa0b44.js  06e68d24501f.js  0760013a2483.js  085215adaa2f.js  088f6a9e5b94.js  08c89d8f6401.js  0b7acdd9a193.js  0c21683e37b2.js  0c220ed72713.js  0c76deff10d6.js  0c9b30a1c956.js  0c9cb274efea.js  0d095973493b.js  0d91abf81090.js  0da859cb7f28.js  0e0bf87c78c9.js  0e1275e1731c.js  0e1705cead11.js  0f66d66471f5.js  10402f43d543.js  12e5fec3ec6a.js  12f831303d9c.js  1308e0b5b0b2.js  131591aa4d0b.js  1392d8ba32d8.js  13c51ec816dc.js  (+256 more)
api/tester/: all.html  fn.main.html  index.html
benches/: line_continuations.rs
compat/accparser/: .gitignore  CMakeLists.txt  README.md  accparser.pc.in  build.sh
compat/accparser/examples/: basic_test.cpp
compat/accparser/include_shims/: OpenACCASTConstructor.h  accparserBaseListener.h
compat/accparser/src/: acc_tester_roup.cpp  compat_impl.cpp  roup_acc_compat.h
compat/accparser/tests/: comprehensive_test.cpp
compat/ompparser/: .gitignore  CMakeLists.txt  PROGRESS_STATUS.md  README.md  build.sh  ompparser.pc.in
compat/ompparser/examples/: basic_test.cpp
compat/ompparser/src/: compat_globals.cpp  compat_impl.cpp  roup_compat.h
compat/ompparser/tests/: comprehensive_test.cpp
docs/: ACCPARSER_COMPAT_DESIGN.md  BUILD_SCRIPT_RATIONALE.md  CLANG_FLANG_CONTINUATION_ANALYSIS.md  CODEX_AUTO_REVIEW_SETUP.md  CONSTANTS_ARCHITECTURE.md  C_API.md  C_API_COMPARISON.md  C_FFI_STATUS.md  DEBUGGER.md  DEVELOPMENT_HISTORY.md  DOCS_CLEANUP_COMPLETE.md  DOCS_REORGANIZATION.md  HANDLE_BASED_FFI_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  LANGUAGE_FRONTENDS.md  LANGUAGE_PARSING.md  LANGUAGE_SUPPORT.md  LLVM_CLANG_CPP17_UPDATE.md  MINIMAL_UNSAFE_SUMMARY.md  OPENACC_SUPPORT.md  OPENACC_VV.md  OPENMP_CHANGE_SUMMARY.md  OPENMP_SUPPORT.md  PERFORMANCE_ANALYSIS.md  PHASE3_COMPLETE.md  PLAIN_DIRECTIVE_STRINGS.md  PROJECT_STATUS.md  QUICK_START.md  TUTORIAL_BUILDING_AND_RUNNING.md  TUTORIAL_SUMMARY.md  UNSAFE_CODE_ORGANIZATION.md  WEBSITE_PLAN.md  WHY_OUTPUT_POINTERS_NEED_UNSAFE.md  plain_directives.md
docs/book/: .gitignore  README.md  book.toml
examples/c/: Makefile  README.md  WORKING_STATUS.md  basic_parse  basic_parse.c  clause_inspection.c  error_handling.c  string_builder.c  tutorial  tutorial_basic  tutorial_basic.c
examples/cpp/: Makefile  tutorial_basic  tutorial_basic.cpp  tutorial_cpp
examples/fortran/: Makefile  README.md  basic_parse.f90  roup_interface.mod  tutorial_basic.f90
include/: roup.h
openacc/: openacc-3-4-directive-clause-matrix.html  openacc-3-4-directives-clauses.html  openacc-3-4-restrictions.html
scripts/: extract_openmp_keywords.py  install-git-hooks.sh  openacc_vv_runner.py  run_openacc_vv.py
scripts/hooks/: README.md  pre-push
src/: c_api.rs  constants_gen.rs  lexer.rs  lib.rs  parser.rs  roup_constants.h
src/ast/: mod.rs
src/c_api/: openacc.rs
src/debugger/: ast_display.rs  mod.rs  stepper.rs  ui.rs
src/ffi/: clause.rs  directive.rs  mod.rs  parse.rs  registry.rs  string.rs  types.rs
src/ir/: builder.rs  clause.rs  convert.rs  directive.rs  error.rs  expression.rs  lang.rs  language_conversion.rs  language_support.rs  mod.rs  translate.rs  types.rs  validate.rs  variable.rs
src/parser/: ast_builder.rs  clause.rs  directive.rs  directive_kind.rs  mod.rs  openacc.rs  openmp.rs
tests/: acc_c_api_integration.rs  acc_clause_macros.rs  acc_directive_kind_matches_constants.rs  acc_directives_and_end_pairs.rs  c_to_fortran_unparse.rs  debug_continuations.rs  debugger_integration.rs  directive_templates.rs  ir_roundtrip.rs  language_conversion.rs  language_parsing_integration.rs  openacc_c_api.rs  openacc_keyword_coverage.rs  openacc_roundtrip.rs  openmp_clause_validation.rs  openmp_comments_and_nested.rs  openmp_for.rs  openmp_fortran.rs  openmp_fortran_sentinels.rs  openmp_keyword_coverage.rs  openmp_language_support.rs  openmp_line_continuations.rs  openmp_loop_transformations.rs  openmp_metadirective.rs  openmp_normalization.rs  openmp_parallel.rs  openmp_plain_output.rs  openmp_reduction.rs  openmp_roundtrip.rs  openmp_support_matrix.rs  openmp_target.rs  openmp_task.rs  openmp_teams.rs  openmp_translation.rs  plain_directive.rs
utils/: tester.rs
website/: CNAME  Gemfile  README.md  _config.yml  beautiful-jekyll-theme.gemspec  index.html
(+378 files in other folders)
