[package]
name = "roup"
version = "0.6.0"
authors = ["Anjia Wang <anjia@ouankou.com>"]
edition = "2021"
rust-version = "1.85.0"  # MSRV: Required for mdBook dependencies (edition2024 support)
license = "BSD-3-Clause"
description = "Rust-first parser for OpenMP and OpenACC directives with C/C++ bindings"
repository = "https://github.com/ouankou/roup"
documentation = "https://roup.ouankou.com"
homepage = "https://roup.ouankou.com"
keywords = ["openmp", "openacc", "parser", "hpc", "parallel"]
categories = ["parsing", "science", "development-tools::ffi"]
readme = "README.md"

[dependencies]
# Learning Rust: External Dependencies
# =====================================
# Cargo makes it easy to use external crates (libraries)
# nom = parser combinator library for building parsers
# Version 8.0.0 uses semantic versioning
nom = "8.0.0"
bitflags = "2.4"

# FFI layer dependencies (100% safe Rust)
once_cell = "1"     # Lazy static initialization
parking_lot = "0.12" # Faster Mutex than std

# Robust Rust AST parser (used by both build.rs and `gen` binary for header validation)
syn = { version = "2", features = ["full", "parsing"] }

[dev-dependencies]
# Test-only dependencies
serial_test = "3.0" # Serialize tests that share global state
criterion = "0.5"   # Benchmarking framework
regex = "1"

[build-dependencies]
# Build script dependencies (build.rs only) - syn also in main dependencies for `gen` binary
syn = { version = "2", features = ["full", "parsing"] }  # Robust Rust AST parser

[[bin]]
name = "gen"
path = "src/bin/gen.rs"

[[bin]]
name = "roup_roundtrip"
path = "src/bin/roup_roundtrip.rs"

[[bin]]
name = "roup_debug"
path = "src/bin/roup_debug.rs"

[lib]
# Library configuration for FFI
# cdylib = C-compatible dynamic library for FFI
# staticlib = C-compatible static library for embedding
# rlib = Rust library for Rust code
crate-type = ["cdylib", "staticlib", "rlib"]

# Learning Rust: Binary Targets
# ==============================
# [[bin]] sections define executable programs
# Libraries (lib.rs) + binaries work together
[[bin]]
name = "tester"
path = "utils/tester.rs"

# Benchmark configuration
[[bench]]
name = "line_continuations"
harness = false
